# sf-secrets

./: LICENSE  README.md  pyproject.toml
docs/: api-reference.md  changelog.md  ci-integration.md  cli-reference.md  contributing.md  entity-types.md  ignore-patterns.md  index.md  installation.md  quickstart.md  tutorial.md  verify-chain.md
src/spanforge_secrets/: __init__.py  __main__.py  _luhn.py  _patterns.py  _verhoeff.py  chain.py  cli.py  scanner.py
tests/: test_spanforge_secrets.py
