[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "spanforge-secrets"
version = "1.0.0"
description = "CI Gate 01 — PII and API key scanner for Spanforge compliance pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Spanforge Team" }]
keywords = [
    "pii", "security", "api-key", "secrets-scanning",
    "spanforge", "ci", "compliance", "llm", "redaction",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.9"

# spanforge>=2.0.2 is required for global date format support (DD/MM/YYYY, DD Mon YYYY).
dependencies = [
    "spanforge>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
spanforge-secrets = "spanforge_secrets.cli:main"

[project.urls]
"Source" = "https://github.com/spanforge/spanforge-secrets"
"Bug Tracker" = "https://github.com/spanforge/spanforge-secrets/issues"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/spanforge_secrets"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
